--- a/web/index.html
+++ b/web/index.html
@@ -1,43 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
   <base href="$FLUTTER_BASE_HREF">
   <script type="module">
     // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
+    import { initializeApp } from "firebase/app";
+    import { getAnalytics } from "firebase/analytics";
+    import { getFirestore } from "firebase/firestore";
+    import { getAuth } from "firebase/auth";
 
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyDSCVtDG8Oh8PNKwgjwyLmsgFaCNsvOyiY",
-  authDomain: "taskify-a182c.firebaseapp.com",
-  databaseURL: "https://taskify-a182c-default-rtdb.asia-southeast1.firebasedatabase.app",
-  projectId: "taskify-a182c",
-  storageBucket: "taskify-a182c.appspot.com",
-  messagingSenderId: "129387226201",
-  appId: "1:129387226201:web:49b9e5b092d6b9253bfd48",
-  measurementId: "G-NJ0G1J4KDY"
-};
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyDSCVtDG8Oh8PNKwgjwyLmsgFaCNsvOyiY",
+      authDomain: "taskify-a182c.firebaseapp.com",
+      databaseURL: "https://taskify-a182c-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "taskify-a182c",
+      storageBucket: "taskify-a182c.appspot.com",
+      messagingSenderId: "129387226201",
+      appId: "1:129387226201:web:49b9e5b092d6b9253bfd48",
+      measurementId: "G-NJ0G1J4KDY"
+    };
 
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+    const firestore = getFirestore(app);
+    const auth = getAuth(app);
   </script>
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -56,6 +44,6 @@ const analytics = getAnalytics(app);
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+<script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
